# django_egd

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
egd/: db.sqlite3  manage.py
egd/egd/: asgi.py  settings.py  urls.py  wsgi.py
