[tool.poetry]
name = "django-egd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_egd"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.7.0"
ruff = "^0.0.287"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
